# crude-analysis

./: README.md  crude_analysis.ipynb  pyproject.toml
data/: crude_commercial_stock.csv  crude_commercial_stock_raw.xls  crude_exports.csv  crude_exports_raw.xls  crude_imports.csv  crude_imports_raw.xls  crude_inventory.csv  crude_inventory_raw.xls  crude_prices.csv  crude_production.csv  crude_production_raw.xls  crude_products_supplied.csv  crude_products_supplied_raw.xls  crude_spot_prices_raw.xls  oil_data.dta
