[tool.poetry]
name = "crude-analysis"
version = "0.1.0"
description = ""
authors = ["benisbuzz <ben@danziger.uk>"]
readme = "README.md"
packages = [{include = "crude_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
TA-Lib = "^0.4.28"
fredpy = "^3.2.8"
ipython = "^8.15.0"
requests = "^2.31.0"
statsmodels = "^0.14.0"
pathlib = "^1.0.1"
xlrd = "^2.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
